# cvmatch

./: .gitattributes  .gitignore  README.md  cvmatch.bat  cvmatch.sh  installation_cvmatch_ai_linux.sh  installation_cvmatch_ai_windows.bat  installation_cvmatch_linux.sh  installation_cvmatch_windows.bat  main.py  pyproject.toml  requirements_ai_windows.txt  requirements_linux.txt  requirements_windows.txt
CV/: .gitkeep
app/: __init__.py  bootstrap.py  config.py
app/cli/: main.py
app/common/: __init__.py  sections.py
app/config/: feature_flags.py
app/config_thresholds/: __init__.py  extraction_config.json  extraction_thresholds.py  feature_flags.json  quality.yaml
app/controllers/: __init__.py  cv_generator.py  export_manager.py  profile_extractor.py
app/data/: edu_org_lexicon.txt
app/lifecycle/: __init__.py  app_initializer.py  app_shutdown.py  bootstrap.py
app/logging/: __init__.py  emoji_sanitizer.py  pii_filters.py  safe_logger.py
app/ml/: __init__.py  context_classifier.py  mock.py  ner_fr.py  ner_router.py  runtime_state.py  zero_shot.py
app/models/: __init__.py  database.py  extraction_schemas.py  job_application.py  user_profile.py
app/parsers/: __init__.py  education_detector.py  education_parser.py  experience_parser.py  metrics_mixin.py  project_parser.py  soft_skills_parser.py
app/resources/: dictionaries_extended.json  patterns.json
app/rules/: __init__.py  certifications.json  certifications_enhanced.json  date_normalize.py  date_patterns.json  date_patterns.py  durations.json  education.json  employment_tokens.json  experience.json  experiences_whitelist.json  interests.json  languages.json  loader.py  ml_config.json  pipeline.json  precedence.yaml  projects.json  projects_enhanced.json  publications.json  scholarly.json  soft_skills.json  volunteering.json
app/schemas/: __init__.py  critic_schema.py  cv_schema.py  offer_keywords_schema.py  profile_schema.py
app/services/: __init__.py  dialog_service.py  dialogs.py  navigation_service.py  progress_service.py  telemetry.py
app/utils/: __init__.py  academic_internship_handler.py  address_detector.py  block_analyzer.py  block_classifier.py  boundary_guards.py  cert_norm.py  certification_normalizer.py  certification_router.py  cli_config.py  confidence_filter.py  contact_line_detector.py  crash_resistant_logger.py  cv_analyzer.py  cv_extractor_advanced.py  cv_json_renderer.py  cv_json_storage.py  cv_mapper.py  cv_normalizer.py  cv_parsers.py  cv_scorer.py  database_manager.py  date_norm.py  date_normalization.py  date_normalizer.py  debug_opts.py  domain_detector.py  duplicate_detector.py  education_extractor_enhanced.py  element_extractor.py  emoji_utils.py  enhanced_cv_extractor.py  enhanced_extraction_pipeline.py  enhanced_normalization.py  experience_extractor_enhanced.py  experience_filters.py  experience_gate.py  experience_metrics.py  experience_validation.py  extraction_constants.py  (+77 more)
app/views/: __init__.py  extracted_data_viewer.py  generation_loading_dialog.py  main_window.py  ml_dialog_mixin.py  model_loading_dialog.py  profile_details_editor.py  profile_setup.py  settings_dialog.py  template_preview_window.py  text_cleaner.py
app/widgets/: __init__.py  collapsible_section.py  dialog_manager.py  (+8 more)
classifier/: __init__.py  section_classifier.py
config/: model_registry.yaml
cvextractor/: __init__.py  cli.py
docs/: AGENTS.md  COMMENT_LANCER.md  DOCUMENTATION.md  MODELES_IA.md  STRUCTURE.md
schemas/: cv_extraction_output.json  profile_details_model.json
scripts/: README.txt  __init__.py  _compile_views_check.py  _import_viewer_check.py  _py_compile_targets.py  _scan_fffd.py  check_ai_models.py  clean_pii_logs_emergency.py  cleanup_pycache.bat  cleanup_reset.bat  cleanup_reset2.bat  compare_json.py  compare_ml.py  cv_pipeline_cli.py  debug_emoji_detection.py  diagnostic.py  download_ai_models.py  emoji_audit.py  enhanced_cli.py  find_duplicate_functions.py  fix_all_files_mojibake.py  fix_all_mojibake_comprehensive.py  fix_all_remaining_mojibake_final.py  fix_corrupt_emojis.py  fix_emoji_enhanced.py  fix_emoji_final.py  fix_main_window_emojis.py  fix_main_window_emojis_final.py  fix_main_window_mojibake.py  fix_main_window_safe.py  fix_model_cache.py  fix_specific_emoji.py  fix_syntax_error.py  fix_weasyprint_windows.py  inspect_lines.py  install_auto_gptq_windows.py  install_llama_cpp.py  interactive_model_installer.py  migrate_linkedin_columns.py  migrate_to_venv.bat  (+66 more)
(+144 files in other folders)
